[package]
name = "snakesy"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
embassy-executor = { version = "0.6.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
